# pet_cost

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  功能交付清单.md  部署文档.md
backend/: .env.example  README.md  pet-cost.spec  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 096466e69945_initial_schema.py  2d09493ee593_add_pinyin_columns_for_customer_and_pet.py  7dd7aae05221_add_budgets_table.py  8a1c9d2e4f01_extend_categories_for_petshop.py  9b2e1f3a5c10_add_default_amount_to_categories.py  a1b2c3d4e5f6_add_balance_and_transactions.py  b2c3d4e5f6a7_add_app_settings.py  c3d4e5f6a7b8_add_discount_amount_to_txn.py  d4e5f6a7b8c9_add_discount_to_cost_records.py  e5f6a7b8c9d0_add_recharge_packages.py  f6a7b8c9d0e1_add_boarding_orders.py
backend/app/: launcher.py  main.py  seed.py
backend/app/core/: auth.py  boarding_scheduler.py  config.py  database.py  exceptions.py  pinyin.py  security.py
backend/app/crud/: __init__.py  balance.py  boarding.py  budget.py  category.py  cost.py  customer.py  export_csv.py  import_customers.py  pet.py  recharge_package.py  search.py  settings.py  stats.py
backend/app/models/: __init__.py  app_setting.py  balance.py  boarding.py  budget.py  budget.py">  category.py  cost.py  customer.py  pet.py  recharge_package.py
backend/app/schemas/: __init__.py  (+13 more)
backend/scripts/: build-windows.bat  hash_password.py
backend/tests/: conftest.py  test_boarding.py  test_database.py  test_export.py  test_import_customers.py  test_migrations.py  test_search.py  test_seed.py  test_stats.py
(+139 files in other folders)
